# zero-dl

./: .gitignore  Cargo.toml  README.md
src/: activation_function.rs  arr_functions.rs  functions.rs  hlist_extra.rs  initializer.rs  layer.rs  lib.rs  main.rs  mnist.rs  network.rs  nn.rs  perceptron.rs  plot.rs  simple_perceptron.rs
src/initializers/: mod.rs  random.rs  zero.rs
src/layers/: affine.rs  convolution.rs  mod.rs  n_dim_to_2dim.rs  placeholder.rs  pooling.rs  relu.rs  softmax_cross_entropy.rs  softmax_with_loss.rs  variable.rs
