[package]
name = "zero-dl"
version = "0.1.0"
authors = ["kgtkr <kgtkr.jp@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotlib = "0.5.1"
ndarray = { version = "0.13.1", features = ["serde", "rayon"] }
flate2 = "1.0.14"
byteorder = "1.3.4"
ndarray-rand = "0.11.0"
serde = { version = "1.0.111", features = ["derive"] }
bincode = "1.2.1"
rand = "0.7.3"
rayon = "1.3.0"
frunk = "0.3.1"
frunk_core = "0.3.1"
ndarray-stats = "0.3.0"
frunk_labelled_proc_macro = { git = "https://github.com/kgtkr/frunk-labelled-proc-macro.git" }

[[bin]]
name = "main"
path = "src/main.rs"
